fix some spacing

--- a/src/ui/styles/cards-view.css
+++ b/src/ui/styles/cards-view.css
@@ -3,11 +3,13 @@
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   gap: var(--explorer-space-3);
+  /* margin-top: 2em; */
 }
 
 .explorer-notes-grid {
   grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
-  margin-top: var(--explorer-space-4);
+  /* margin-top: var(--explorer-space-4); */
+  /* margin-top: 4em; */
 }
 
 .is-mobile .explorer-notes-grid {
